Disable horizontal scroll and add fixed header

--- a/mergetrip/src/components/HomePage.css
+++ b/mergetrip/src/components/HomePage.css
@@ -1,6 +1,8 @@
 .HomePage {
   background-color: #DFD2B6;
   text-align: center;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 .HomePage-header {
@@ -36,7 +38,7 @@
   margin: 25px 30px 0px 0px;
   cursor: pointer;
   border-radius: 16px;
-  position: absolute;
+  position: fixed;
   right: 0px;
 }
 
@@ -69,4 +71,28 @@ div {
   width: 100%;
   height: 100%;
   position: relative;
+}
+
+.secondPage {
+  background-color: #DFD2B6;
+  text-align: center;
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+.home-button {
+  background-color: transparent;
+  color: black;
+  border: none;
+  padding: 0px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 50px;
+  font-family: Termina;
+  margin: 25px 30px 0px 0px;
+  cursor: pointer;
+  border-radius: 16px;
+  position: fixed;
+  left: 0px;
 }
